<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="me_star">我的收藏</string>
    <string name="me_change_image">更换头像</string>
    <string name="me_username">账户名</string>
    <string name="me_email">邮箱</string>
    <string name="me_login">登录</string>
    <string name="me_steps">我的足迹\n</string>
    <string name="me_setting">设置</string>
    <string name="me_step_fragment">step_fragment</string>
    <string name="me_star_fragment">star_fragment</string>
</resources>